// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match the snapshot when not on a page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "display": "flex",
      "height": "100%",
    }
  }
>
  <Header />
  <Component
    style={
      Object {
        "flex": 3,
      }
    }
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage=""
  />
</Component>
`;

exports[`App should match the snapshot when on the Camera page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "display": "flex",
      "height": "100%",
    }
  }
>
  <Component
    style={
      Object {
        "flex": 3,
      }
    }
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Camera"
  />
</Component>
`;

exports[`App should match the snapshot when on the Collected landmarks page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "display": "flex",
      "height": "100%",
    }
  }
>
  <Header />
  <CollectedLandmarksContainer
    pics={Array []}
    visitedLocations={
      Array [
        Object {
          "description": "example 1 description",
          "landmark_id": 1,
          "lat": 39.75302,
          "lon": -104.9965,
          "name": "Summit",
          "photo_url": "",
          "visited": false,
        },
        Object {
          "description": "example 2 description",
          "landmark_id": 2,
          "lat": 39.75023,
          "lon": -104.9965,
          "name": "The Delectable Egg",
          "photo_url": "",
          "visited": true,
        },
        Object {
          "description": "over a mile away",
          "landmark_id": 3,
          "lat": 39.77023,
          "lon": -104.9965,
          "name": "Far away example",
          "photo_url": "",
          "visited": false,
        },
      ]
    }
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Collected landmarks"
  />
</Component>
`;

exports[`App should match the snapshot when on the Home page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "display": "flex",
      "height": "100%",
    }
  }
>
  <Header />
  <Component
    style={
      Object {
        "flex": 3,
      }
    }
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Home"
  />
</Component>
`;

exports[`App should match the snapshot when on the Login page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "display": "flex",
      "height": "100%",
    }
  }
>
  <Header />
  <Login
    currentUserId={-1}
    fetchUserInfo={[Function]}
    setUserLoginId={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="Login"
  />
</Component>
`;

exports[`App should match the snapshot when on the User profile page 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "display": "flex",
      "height": "100%",
    }
  }
>
  <Header />
  <UserProfile
    profilePic=""
    takeProfilePic={[Function]}
  />
  <Footer
    changeCurrentPage={[Function]}
    currentPage="User profile"
  />
</Component>
`;
